mxslc/tests/data/error/bad_arguments_1.mxsl
float foo(float a, float b)
{
    return a + b;
}

float f = foo(a = 1.0, 2.0);
